--- a/guli_parent/service/service_oss/src/main/resources/application.properties
+++ b/guli_parent/service/service_oss/src/main/resources/application.properties
@@ -8,8 +8,8 @@ spring.profiles.active=dev
 
 #阿里云 OSS
 #不同的服务器，地址不同
-aliyun.oss.file.endpoint=oss-cn-beijing.aliyuncs.com
-aliyun.oss.file.keyid=LTAI4GJgZZvCLPs79MBCQxjK
-aliyun.oss.file.keysecret=wYOZJFD94xkwfoLpYR0h09H2XJpsLw
+aliyun.oss.file.endpoint=
+aliyun.oss.file.keyid=
+aliyun.oss.file.keysecret=
 #bucket可以在控制台创建，也可以使用java代码创建
-aliyun.oss.file.bucketname=edu-20200906
+aliyun.oss.file.bucketname=
